--- a/estate_management/estate_admin/templates/estate_admin/index.html
+++ b/estate_management/estate_admin/templates/estate_admin/index.html
@@ -20,6 +20,9 @@
 
 <body>
   {% if not request.user.is_authenticated %}
+  <div class="container">
+
+  
 
   <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
@@ -67,6 +70,9 @@
         <li class="nav-item">
           <a class="nav-link " href="{% url 'list_tenants' %}">list tenant</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link " href="{% url 'logout' %}">logout</a>
+        </li>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
@@ -76,6 +82,8 @@
       </nav>
 
       {% endif %}
+
+    </div>
 
 <div class="container">
 
