--- a/estate_management/estate_admin/templates/estate_admin/add_property.html
+++ b/estate_management/estate_admin/templates/estate_admin/add_property.html
@@ -1,17 +1,69 @@
-
 {% extends "estate_admin/index.html" %}
 {% load static %}
 
 
 {% block content %}
 
+<link rel="stylesheet" href="{% static 'estate_admin/add_properties.css' %}">
+<div class="container">
+    <div class="login-box">
+        <h1>Add New Property</h1>
+        <!-- property_form.html -->
 
-<h1>Add New Property</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save</button>
-</form>
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+
+            <div class="mb-3">
+                <label for="id_name" class="form-label">Name:</label>
+                <input type="text" name="name" id="id_name" class="form-control" value="{{ form.name.value }}">
+            </div>
+
+            <!-- Repeat for other fields -->
+            <div class="mb-3">
+                <label for="id_address" class="form-label">Address:</label>
+                <textarea name="address" id="id_address" class="form-control">{{ form.address.value }}</textarea>
+            </div>
+            <div class="mb-3">
+                <label for="id_location" class="form-label">Location:</label>
+                <textarea name="location" id="id_location" class="form-control">{{ form.location.value }}</textarea>
+            </div>
+
+            <div class="mb-3">
+                <label for="id_features" class="form-label">Features:</label>
+                <textarea name="features" id="id_features" class="form-control">{{ form.features.value }}</textarea>
+            </div>
+
+            <div class="d-flex bhk-group ">
+                <div class="mb-3 ml-2 bhk-input">
+                    <label for="id_flats_1bhk" class="form-label">1BHK</label>
+                    <input type="text" name="flats_1bhk" id="id_flats_1bhk" class="form-control"
+                        value="{{ form.flats_1bhk.value }}">
+                </div>
+
+                <div class="mb-3 mr-2 bhk-input">
+                    <label for="id_flats_2bhk" class="form-label">2BHK</label>
+                    <input type="text" name="flats_2bhk" id="id_flats_2bhk" class="form-control"
+                        value="{{ form.flats_2bhk.value }}">
+                </div>
+                <div class="mb-3 mr-2 bhk-input">
+                    <label for="id_flats_3bhk" class="form-label">3BHK</label>
+                    <input type="text" name="flats_3bhk" id="id_flats_3bhk" class="form-control"
+                        value="{{ form.flats_3bhk.value }}">
+                </div>
+                <div class="mb-3 mr-2 bhk-input">
+                    <label for="id_flats_4bhk" class="form-label">4BHK</label>
+                    <input type="text" name="flats_4bhk" id="id_flats_4bhk" class="form-control"
+                        value="{{ form.flats_4bhk.value }}">
+                </div>
+            </div>
+
+            <!-- Add other fields similarly -->
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+</div>
+
 
 
 {% endblock content %}
