--- a/estate_management/estate_admin/templates/estate_admin/index.html
+++ b/estate_management/estate_admin/templates/estate_admin/index.html
@@ -11,6 +11,7 @@
  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'estate_admin/styles.css' %}">
     
   
 
@@ -59,7 +60,7 @@
              
               
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'list_properties' %}"> Form </a>
+          <a class="nav-link" href="{% url 'list_properties' %}"> List Properties </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{% url 'add_property' %}"> add property </a>
