--- a/estate_management/estate_admin/templates/estate_admin/add_or_edit_tenant.html
+++ b/estate_management/estate_admin/templates/estate_admin/add_or_edit_tenant.html
@@ -5,12 +5,18 @@
 
 {% block content %}
 
-<h1>Add New Tenant</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Save</button>
-    </form>
+<link rel="stylesheet" href="{% static 'estate_admin/add_or_edit_tenant.css' %}">
 
+
+<div class="container"> 
+<div class="login-box">
+    <h1>Add New Tenant</h1>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+</div>
+</div>
 
 {% endblock content %}
