--- a/estate_management/estate_admin/static/estate_admin/add_or_edit_tenant.css
+++ b/estate_management/estate_admin/static/estate_admin/add_or_edit_tenant.css
@@ -7,7 +7,7 @@
     min-width: 700px;
     padding: 40px;
     transform: translate(-50%, -50%);
-    background: #EAD196;
+    background: #C3E2C2;
     box-sizing: border-box;
     
     border-radius: 10px;
