--- a/estate_management/estate_admin/templates/estate_admin/add_or_edit_property.html
+++ b/estate_management/estate_admin/templates/estate_admin/add_or_edit_property.html
@@ -6,7 +6,7 @@
 
 <link rel="stylesheet" href="{% static 'estate_admin/add_properties.css' %}">
 <div class="container">
-    <div class="login-box">
+    <div class="addproperty-box">
         <h1>Add New Property</h1>
         <!-- property_form.html -->
 
