--- a/estate_management/estate_admin/templates/estate_admin/list_properties.html
+++ b/estate_management/estate_admin/templates/estate_admin/list_properties.html
@@ -11,21 +11,21 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       {% for property in properties %}
         <div class="col">
-          <div class="card equal-card ">
+          <div class="card equal-card">
             <div class="card-body">
               <h5 class="card-title">{{ property.name }}</h5>
               <p class="card-text">{{ property.address }}</p>
               <p class="card-text">{{ property.location }}</p>
-             
-              <a href="{% url 'update_property' property_id=property.id %}" class="btn btn-info btn-sm d-block d-md-inline-block mb-2 mb-md-0">Update Property</a>
-              <a href="{% url 'property-tenants' property_id=property.id %}" class="btn btn-success btn-sm d-block d-md-inline-block mb-2 mb-md-0">Show Tenants</a>
-              <a href="{% url 'delete_property' property_id=property.id %}" class="btn btn-danger btn-sm d-block d-md-inline-block mb-2 mb-md-0">Delete Property</a>
+    
+              <a href="{% url 'update_property' property_id=property.id %}" class="btn equal-btn-width btn-info btn-sm btn-extra-sm d-block d-md-inline-block mb-2 mb-md-0">Update Property</a>
+              <a href="{% url 'property-tenants' property_id=property.id %}" class="btn equal-btn-width btn-success btn-sm btn-extra-sm d-block d-md-inline-block mb-2 mb-md-0">Show Tenants</a>
+              <a href="{% url 'delete_property' property_id=property.id %}" class="btn equal-btn-width btn-danger btn-sm btn-extra-sm d-block d-md-inline-block mb-2 mb-md-0">Delete Property</a>
             </div>
-            
           </div>
         </div>
       {% endfor %}
     </div>
+    
     
 
 </div>
