--- a/estate_management/estate_admin/templates/estate_admin/add_or_edit_tenant.html
+++ b/estate_management/estate_admin/templates/estate_admin/add_or_edit_tenant.html
@@ -11,11 +11,39 @@
 <div class="container"> 
 <div class="login-box">
     <h1>Add New Tenant</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+    <form method="post">
+        {% csrf_token %}
+        <div class="mb-3">
+            <label for="id_name" class="form-label">Name</label>
+            {{ form.name }}
+        </div>
+        <div class="mb-3">
+            <label for="id_address" class="form-label">Address</label>
+            {{ form.address }}
+        </div>
+        <div class="mb-3">
+            <label for="id_property" class="form-label">Property</label>
+            {{ form.property }}
+        </div>
+        <div class="mb-3">
+            <label for="id_unit_type" class="form-label">Unit Type</label>
+            {{ form.unit_type }}
+        </div>
+        <div class="mb-3">
+            <label for="id_agreement_end_date" class="form-label">Agreement End Date</label>
+            {{ form.agreement_end_date }}
+        </div>
+        <div class="mb-3">
+            <label for="id_monthly_rent_date" class="form-label">Monthly Rent Date</label>
+            {{ form.monthly_rent_date }}
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    
+    
+
+
+
 </div>
 </div>
 
