--- a/estate_management/estate_admin/templates/estate_admin/index.html
+++ b/estate_management/estate_admin/templates/estate_admin/index.html
@@ -6,109 +6,94 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
+
   <link href='https://fonts.googleapis.com/css?family=Forum' rel='stylesheet'>
- 
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="{% static 'estate_admin/styles.css' %}">
-    
-  
+
+
 
   <link rel="stylesheet" href="">
   <title>La Masa</title>
 </head>
 
 <body>
-  {% if not request.user.is_authenticated %}
-  <div class="container">
-
-  
-
-  <form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    <div class="mb-3">
-        <label for="username" class="form-label">Username:</label>
-        <input type="text" name="username" id="username" class="form-control" required>
-    </div>
-    <div class="mb-3">
-        <label for="password" class="form-label">Password:</label>
-        <input type="password" name="password" id="password" class="form-control" required>
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-
-    {% if messages %}
-        <div class="mt-3">
-            {% for message in messages %}
-                <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}</div>
-            {% endfor %}
-        </div>
-    {% endif %}
-</form>
-
-{% else %}
  
-   
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-             
-              
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'list_properties' %}"> List Properties </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'add_property' %}"> add property </a>
-          </li>
-        <li class="nav-item">
-          <a class="nav-link " href="{% url 'add_tenant' %}">add tenant</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="{% url 'list_tenants' %}">list tenant</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="{% url 'logout' %}">logout</a>
-        </li>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+  <div class="container mt-4">
+    {% if not request.user.is_authenticated %}
+      <div class="row justify-content-center mt-4">
+        <div class="col-md-6 col-12 text-center login">
+          <h1 >Real Estate Management Module</h1>
+          <form method="post" action="{% url 'login' %}">
+            {% csrf_token %}
+            <div class="mb-3">
+              <label for="username" class="form-label">Username:</label>
+              <input type="text" name="username" id="username" class="form-control" required>
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Password:</label>
+              <input type="password" name="password" id="password" class="form-control" required>
+            </div>
+            <button type="submit" class="btn btn-home ">Login</button>
+      
+            {% if messages %}
+            <div class="mt-3">
+              {% for message in messages %}
+              <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}</div>
+              {% endfor %}
+            </div>
+            {% endif %}
+          </form>
+        </div>
+      </div>
+    {% else %}
+      <div class="row justify-content-center">
+        <div class="col-12 text-center">
+          <div class="d-flex justify-content-center flex-wrap">
+            <div class="p-2">
+              <a class="btn btn-home btn-block" href="{% url 'list_properties' %}">List Properties</a>
+            </div>
+            <div class="p-2">
+              <a class="btn btn-home btn-block" href="{% url 'add_property' %}">Add Property</a>
+            </div>
+            <div class="p-2">
+              <a class="btn btn-home btn-block" href="{% url 'add_tenant' %}">Add Tenant</a>
+            </div>
+            <div class="p-2">
+              <a class="btn btn-home btn-block" href="{% url 'list_tenants' %}">List Tenant</a>
+            </div>
+            <div class="p-2">
+              <a class="btn btn-home btn-block" href="{% url 'logout' %}">Logout</a>
+            </div>
           </div>
         </div>
-      </nav>
-
-      {% endif %}
-
+      </div>
+    {% endif %}
+    <div class="row justify-content-center">
+      <div class="col-md-8 col-12">
+        {% block content %}{% endblock content %}
+      </div>
     </div>
-
-<div class="container">
-
-
-  {% block content %} {% endblock content %}
-</div>
-
-
-
-
+  </div>
+ 
 
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
 
   <script type="text/javascript" src="{% static 'mars/base.js' %}"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
- 
-  
-  
-  
-  
-  
+
+
+
+
+
+
 
 </body>
 
