--- a/estate_management/estate_admin/templates/estate_admin/list_properties.html
+++ b/estate_management/estate_admin/templates/estate_admin/list_properties.html
@@ -7,24 +7,40 @@
 <link rel="stylesheet" href="{% static 'estate_admin/list_properties.css' %}">
 
 <div class="container">
-    <h1 class="mt-4 mb-2">Property List</h1>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      {% for property in properties %}
-        <div class="col">
-          <div class="card equal-card">
-            <div class="card-body">
-              <h5 class="card-title">{{ property.name }}</h5>
-              <p class="card-text">{{ property.address }}</p>
-              <p class="card-text">{{ property.location }}</p>
-    
-              <a href="{% url 'update_property' property_id=property.id %}" class="btn equal-btn-width btn-info btn-sm btn-extra-sm d-block d-md-inline-block mb-2 mb-md-0">Update Property</a>
-              <a href="{% url 'property-tenants' property_id=property.id %}" class="btn equal-btn-width btn-success btn-sm btn-extra-sm d-block d-md-inline-block mb-2 mb-md-0">Show Tenants</a>
-              <a href="{% url 'delete_property' property_id=property.id %}" class="btn equal-btn-width btn-danger btn-sm btn-extra-sm d-block d-md-inline-block mb-2 mb-md-0">Delete Property</a>
+  <h1 class="mt-4 mb-2">Property List</h1>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    {% for property in properties %}
+      <div class="col">
+        <div class="card h-100"> <!-- Ensure equal height for all cards -->
+          <div class="card-body d-flex flex-column"> <!-- Flex column for internal spacing -->
+             <!-- Flex for title and button alignment -->
+            <h5 class="card-title">{{ property.name }}</h5>
+              
+            
+            <p class="card-text mt-2"><i class="fas fa-address-book"></i> {{ property.address }}</p>
+            <p class="card-text"><i class="fas fa-map-marker-alt"></i> {{ property.location }}</p>
+            <hr> 
+            <h6 class="card-subtitle mb-2 text-center">Features</h6>
+             <!-- Underline -->
+            <p class="card-text">{{ property.features }}</p>
+            <h6> Flats Remaining: </h6>
+            <p> 1bkh:-{{ property.flats_1bhk }}</p>
+            <p> 2bkh:-{{ property.flats_2bhk }}</p>
+            <p> 3bkh:-{{ property.flats_3bhk }}</p>
+            <p> 4bkh:-{{ property.flats_4bhk }}</p>
+            
+            <!-- Place action buttons at the bottom of the card -->
+            <div class="mt-auto pt-2">
+              <a href="{% url 'update_property' property_id=property.id %}" class="btn btn-dark btn-sm me-1">Update</a>
+              <a href="{% url 'delete_property' property_id=property.id %}" class="btn  btn-danger btn-sm">Delete</a>
+              <a href="{% url 'property-tenants' property_id=property.id %}" class="btn btn-success btn-sm">Show Tenants</a>
             </div>
           </div>
         </div>
-      {% endfor %}
-    </div>
+      </div>
+    {% endfor %}
+  </div>
+  
     
     
 
