--- a/estate_management/estate_admin/static/estate_admin/add_or_edit_tenant.css
+++ b/estate_management/estate_admin/static/estate_admin/add_or_edit_tenant.css
@@ -1,10 +1,10 @@
 
 
 .login-box {
-    margin-top: 500px;
+    margin-top: 400px;
     margin-left: 50%;
     
-    min-width: 700px;
+    max-width: 700px;
     padding: 40px;
     transform: translate(-50%, -50%);
     background: #C3E2C2;
