--- a/estate_management/estate_admin/templates/estate_admin/index.html
+++ b/estate_management/estate_admin/templates/estate_admin/index.html
@@ -11,7 +11,8 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
+
   <link rel="stylesheet" href="{% static 'estate_admin/styles.css' %}">
 
 
@@ -25,7 +26,7 @@
   <div class="container mt-4">
     {% if not request.user.is_authenticated %}
       <div class="row justify-content-center mt-4">
-        <div class="col-md-6 col-12 text-center login">
+        <div class="col-md-6 col-8 text-center login">
           <h1 >Real Estate Management Module</h1>
           <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
@@ -51,7 +52,7 @@
       </div>
     {% else %}
       <div class="row justify-content-center">
-        <div class="col-12 text-center">
+        <div class="col-8 text-center">
           <div class="d-flex justify-content-center flex-wrap">
             <div class="p-2">
               <a class="btn btn-home btn-block" href="{% url 'list_properties' %}">List Properties</a>
@@ -73,7 +74,7 @@
       </div>
     {% endif %}
     <div class="row justify-content-center">
-      <div class="col-md-8 col-12">
+      <div class="col-md-10 col-12">
         {% block content %}{% endblock content %}
       </div>
     </div>
