--- a/estate_management/estate_admin/static/estate_admin/list_tenants.css
+++ b/estate_management/estate_admin/static/estate_admin/list_tenants.css
@@ -1,6 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
-
+.container{
+  min-height: 100vh;
+}
 
 .search {
   width: 100%;
@@ -39,4 +41,12 @@
 
 .equal-btn-width{
     width: 100%;
+}
+
+@media (max-width: 768px) {
+  .btn-sm {
+      padding: .25rem .5rem;
+      font-size: .75rem;
+  }
+  /* Add other responsive styles */
 }
