--- a/estate_management/estate_admin/static/estate_admin/styles.css
+++ b/estate_management/estate_admin/static/estate_admin/styles.css
@@ -1,5 +1,6 @@
 body{
     background-color: #F3F8FF;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 :root {
