--- a/estate_management/estate_admin/templates/estate_admin/add_or_edit_property.html
+++ b/estate_management/estate_admin/templates/estate_admin/add_or_edit_property.html
@@ -9,7 +9,7 @@
     <div class="row justify-content-center">
         <div class="col-lg-8 col-md-10 col-sm-12">
             <div class="addproperty-box">
-                <h1>Add New Property</h1>
+                <h1>{% if is_update %}Update Property{% else %}Add New Property{% endif %}</h1>
                 <!-- property_form.html -->
 
                 <form method="post" enctype="multipart/form-data">
@@ -38,67 +38,62 @@
                             class="form-control">{{ form.features.value }}</textarea>
                     </div>
 
-                    <div class="d-flex justify-content-between">
+                    <div class="d-flex flex-column align-items-center">
+
                         <!-- 1BHK Fields -->
-                        <div class="bhk-group">
+                        <div class="bhk-group  d-flex">
                             <div class="mb-3">
                                 <label for="id_flats_1bhk" class="form-label">1BHK Flats</label>
-                                <input type="text" name="flats_1bhk" id="id_flats_1bhk" class="form-control"
-                                    value="{{ form.flats_1bhk.value }}">
+                                <input type="text" name="flats_1bhk" id="id_flats_1bhk" class="form-control" value="{{ form.flats_1bhk.value }}">
                             </div>
                             <div class="mb-3">
                                 <label for="id_cost_1bhk" class="form-label">1BHK Cost</label>
-                                <input type="text" name="cost_1bhk" id="id_cost_1bhk" class="form-control"
-                                    value="{{ form.cost_1bhk.value }}">
+                                <input type="text" name="cost_1bhk" id="id_cost_1bhk" class="form-control" value="{{ form.cost_1bhk.value }}">
                             </div>
                         </div>
-
+                    
                         <!-- 2BHK Fields -->
-                        <div class="bhk-group">
+                        <div class="bhk-group  d-flex">
                             <div class="mb-3">
                                 <label for="id_flats_2bhk" class="form-label">2BHK Flats</label>
-                                <input type="text" name="flats_2bhk" id="id_flats_2bhk" class="form-control"
-                                    value="{{ form.flats_2bhk.value }}">
+                                <input type="text" name="flats_2bhk" id="id_flats_2bhk" class="form-control" value="{{ form.flats_2bhk.value }}">
                             </div>
                             <div class="mb-3">
                                 <label for="id_cost_2bhk" class="form-label">2BHK Cost</label>
-                                <input type="text" name="cost_2bhk" id="id_cost_2bhk" class="form-control"
-                                    value="{{ form.cost_2bhk.value }}">
+                                <input type="text" name="cost_2bhk" id="id_cost_2bhk" class="form-control" value="{{ form.cost_2bhk.value }}">
                             </div>
                         </div>
-
+                    
                         <!-- 3BHK Fields -->
-                        <div class="bhk-group">
+                        <div class="bhk-group  d-flex">
                             <div class="mb-3">
                                 <label for="id_flats_3bhk" class="form-label">3BHK Flats</label>
-                                <input type="text" name="flats_3bhk" id="id_flats_3bhk" class="form-control"
-                                    value="{{ form.flats_3bhk.value }}">
+                                <input type="text" name="flats_3bhk" id="id_flats_3bhk" class="form-control" value="{{ form.flats_3bhk.value }}">
                             </div>
                             <div class="mb-3">
                                 <label for="id_cost_3bhk" class="form-label">3BHK Cost</label>
-                                <input type="text" name="cost_3bhk" id="id_cost_3bhk" class="form-control"
-                                    value="{{ form.cost_3bhk.value }}">
+                                <input type="text" name="cost_3bhk" id="id_cost_3bhk" class="form-control" value="{{ form.cost_3bhk.value }}">
                             </div>
                         </div>
-
+                    
                         <!-- 4BHK Fields -->
-                        <div class="bhk-group">
+                        <div class="bhk-group d-flex">
                             <div class="mb-3">
                                 <label for="id_flats_4bhk" class="form-label">4BHK Flats</label>
-                                <input type="text" name="flats_4bhk" id="id_flats_4bhk" class="form-control"
-                                    value="{{ form.flats_4bhk.value }}">
+                                <input type="text" name="flats_4bhk" id="id_flats_4bhk" class="form-control" value="{{ form.flats_4bhk.value }}">
                             </div>
                             <div class="mb-3">
                                 <label for="id_cost_4bhk" class="form-label">4BHK Cost</label>
-                                <input type="text" name="cost_4bhk" id="id_cost_4bhk" class="form-control"
-                                    value="{{ form.cost_4bhk.value }}">
+                                <input type="text" name="cost_4bhk" id="id_cost_4bhk" class="form-control" value="{{ form.cost_4bhk.value }}">
                             </div>
                         </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    
                     </div>
-
+                    
                     <!-- Add other fields similarly -->
 
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                   
                 </form>
             </div>
         </div>
