--- a/estate_management/estate_admin/templates/estate_admin/index.html
+++ b/estate_management/estate_admin/templates/estate_admin/index.html
@@ -31,9 +31,9 @@
           <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
             <div class="mb-3">
-              <label for="username" class="form-label">Username:</label>
-              <input type="text" name="username" id="username" class="form-control" required>
-            </div>
+              <label for="email" class="form-label">Email:</label>
+              <input type="email" name="email" id="email" class="form-control" required>
+          </div>
             <div class="mb-3">
               <label for="password" class="form-label">Password:</label>
               <input type="password" name="password" id="password" class="form-control" required>
@@ -86,8 +86,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
-
-  <script type="text/javascript" src="{% static 'mars/base.js' %}"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
