--- a/estate_management/estate_admin/templates/estate_admin/list_tenants.html
+++ b/estate_management/estate_admin/templates/estate_admin/list_tenants.html
@@ -22,6 +22,7 @@
     <div class="mt-4">
     
    <!--<h2>{{ unit_type }}</h2> -->
+   <div class="table-responsive">
    <table border="2" class="table">
     <thead class="table-dark">
         <tr>
@@ -63,6 +64,7 @@
         {% endfor %}
     </tbody>
 </table>
+</div>
 </div>
 </div>
 
