--- a/estate_management/estate_admin/templates/estate_admin/add_or_edit_tenant.html
+++ b/estate_management/estate_admin/templates/estate_admin/add_or_edit_tenant.html
@@ -39,6 +39,10 @@
                         <label for="id_monthly_rent_date" class="form-label">Monthly Rent Date</label>
                         {{ form.monthly_rent_date }}
                     </div>
+                    <div class="mb-3">
+                        <label for="id_monthly_rent_date" class="form-label">Document  </label>
+                        {{ form.document }}
+                    </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </div>
