--- a/estate_management/estate_admin/templates/estate_admin/add_or_edit_tenant.html
+++ b/estate_management/estate_admin/templates/estate_admin/add_or_edit_tenant.html
@@ -13,7 +13,7 @@
             <div class="login-box">
                 <h1>{% if is_update %}Update Tenant{% else %}Add New Tenant{% endif %}</h1>
                 
-                <form method="post">
+                <form method="post"  enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="mb-3">
                         <label for="id_name" class="form-label">Name</label>
