--- a/estate_management/estate_admin/templates/estate_admin/property_tenants.html
+++ b/estate_management/estate_admin/templates/estate_admin/property_tenants.html
@@ -14,6 +14,8 @@
             <th scope="col">Name</th>
             <th scope="col">Address</th>
             <th scope="col">Unit Type</th>
+            <th scope="col">rent cost</th>
+            <th scope="col">Agreement Document</th>
             <th scope="col">Agreement End Date</th>
             <th scope="col">Monthly Rent Date</th>
             <th scope="col">Option</th>
@@ -27,9 +29,20 @@
         <td>{{ tenant.name }}</td>
         <td>{{ tenant.address }}</td>
         <td>{{ tenant.unit_type }}</td>
+        <td>{{ tenant.rent_cost }}</td>
+        <td>
+            {% if tenant.document %}
+                <a href="{{ tenant.document.url }}" download="{{ tenant.document.name }}">Download PDF</a>
+            {% else %}
+                No Document
+            {% endif %}
+        </td>
         <td>{{ tenant.agreement_end_date }}</td>
         <td>{{ tenant.monthly_rent_date }}</td>
-        <td><a href="{% url 'update_tenant' tenant_id=tenant.id %}">Edit</a></td>
+        <td><a href="{% url 'update_tenant' tenant_id=tenant.id %}" class="btn equal-btn-width btn-info btn-sm d-block d-md-inline-block mb-2 mb-md-0"
+            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Update tenant</a>
+         <a href="{% url 'delete_tenant' tenant_id=tenant.id %}" class="btn equal-btn-width btn-danger btn-sm d-block d-md-inline-block mb-2 mb-md-0"
+            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete tenant</a> </td>
     </tr>
     {% empty %}
     
